# espresso

./: .envrc  .gitignore  .railwayignore  Cargo.toml  README.md  block_old.txt  build.rs  package.json  plugin_config.json  plugin_config.template.json  pnpm-lock.yaml  railway.json  run  rust-toolchain.toml  shell.nix  turbo.json
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yaml  rust.yaml
apps/streamer/: Cargo.toml  README.md
apps/streamer/jetstreamer-firehose/src/: dataframe.rs  entry.rs  epochs.rs  firehose.rs  index.rs  main.rs  node.rs  rewards.rs  transaction.rs  utils.rs
apps/streamer/jetstreamer-plugin/: Cargo.toml
apps/streamer/jetstreamer-plugin/src/: lib.rs
apps/streamer/jetstreamer-plugin/src/plugins/: program_tracking.rs  query.sql
apps/streamer/jetstreamer-utils/: build.rs
apps/streamer/jetstreamer-utils/src/: clickhouse.rs
apps/streamer/scripts/: backfill.sh  start-production.sh
apps/streamer/src/: lib.rs  main.rs
apps/web/: .env.example  .vercelignore  next.config.js  package.json  tailwind.config.ts  tsconfig.json  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/health/: route.ts
apps/web/app/api/network/stats/: route.ts
apps/web/app/api/network/tps/: route.ts
apps/web/app/api/programs/: route.ts
apps/web/app/api/programs/[id]/: route.ts
apps/web/app/api/transactions/: route.ts
apps/web/app/api/transactions/[signature]/: route.ts
apps/web/app/network/: page.tsx
apps/web/app/programs/: page.tsx
apps/web/app/programs/[id]/: page.tsx
apps/web/app/transactions/: page.tsx
apps/web/components/: query-provider.tsx  theme-provider.tsx
apps/web/components/layout/: footer.tsx  header.tsx
apps/web/components/network/: current-stats.tsx  health-indicator.tsx  live-feed.tsx  stats-grid.tsx  tps-chart.tsx
apps/web/components/programs/: program-card.tsx  program-chart.tsx  program-list-skeleton.tsx  program-list.tsx  program-stats.tsx
apps/web/components/ui/: badge.tsx  button.tsx
apps/web/hooks/: use-live-data.ts  use-network-stats.ts  use-programs.ts
apps/web/lib/: constants.ts  env.ts
apps/web/lib/clickhouse/: client.ts  queries.ts  types.ts
apps/web/lib/utils/: format.ts  rate-limit.ts  validation.ts
apps/web/types/: common.ts  index.ts  network.ts  program.ts  transaction.ts
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md
geyser-plugin/: Cargo.toml
geyser-replay/: Cargo.toml  README.md
geyser-replay/src/: block.rs  client.rs  dataframe.rs  entry.rs  epoch.rs  epochs.rs  epochs_async.rs  epochs_sync.rs  firehose.rs  index.rs  index_bin.rs  lib.rs  main.rs  network.rs  node.rs  node_reader.rs  rewards.rs  slot_cache.rs  subset.rs  transaction.rs  utils.rs
infrastructure/docker/: .dockerignore  Dockerfile.streamer  Dockerfile.web  docker-compose.yml
jetstreamer-build-cdylib/: Cargo.toml
jetstreamer-build-cdylib/src/: lib.rs
jetstreamer-firehose/: Cargo.toml  README.md  update-indexes-forever.sh
jetstreamer-firehose/src/: block.rs  epoch.rs  firehose.rs  index.rs  index_bin.rs  lib.rs  main.rs  network.rs  node.rs  node_reader.rs  rewards.rs  subset.rs  transaction.rs  utils.rs
jetstreamer-geyser-plugin/: Cargo.toml
jetstreamer-geyser-plugin/src/: clickhouse.rs  clickhouse_client_bin.rs  clickhouse_server_bin.rs  clickhouse_utils.rs  geyser.rs  lib.rs
jetstreamer-plugin/: Cargo.toml
jetstreamer-plugin/src/: bridge.rs  ipc.rs  lib.rs  plugins.rs
jetstreamer-plugin/src/plugins/: program_tracking.rs
jetstreamer-utils/: Cargo.toml
jetstreamer-utils/src/: clickhouse.rs  clickhouse_client_bin.rs  clickhouse_server_bin.rs  lib.rs
jetstreamr-build-cdylib/: Cargo.toml
jetstreamr-build-cdylib/src/: lib.rs
jetstreamr-geyser-plugin/: Cargo.toml
jetstreamr-geyser-plugin/src/: clickhouse.rs  clickhouse_client_bin.rs  clickhouse_server_bin.rs  geyser.rs  lib.rs
jetstreamr-plugin/: Cargo.toml
jetstreamr-plugin/src/: ipc.rs  lib.rs
of1/: Cargo.toml
of1-cache/: Cargo.toml
of1-cache/src/: lib.rs
of1/src/: client.rs  lib.rs
of1/src/core/: block.rs  dataframe.rs  entry.rs  epoch.rs  mod.rs  node.rs  rewards.rs  subset.rs  transaction.rs
scripts/: deploy-streamer.sh  dev.sh  setup.sh
solira-build-cdylib/: Cargo.toml
solira-build-cdylib/src/: lib.rs
solira-core/: Cargo.toml
solira-core/src/: config.rs  geyser.rs  ipc.rs  lib.rs
solira-geyser-plugin/: Cargo.toml  build.rs
solira-geyser-plugin/src/: clickhouse.rs  clickhouse_bin.rs  clickhouse_client_bin.rs  clickhouse_server_bin.rs  geyser.rs
solira-plugin/: Cargo.toml
solira-plugin/src/: bridge.rs  ipc.rs  lib.rs  plugins.rs
solira-plugin/src/plugins/: program_tracking.rs  query.sql
solira-runner/: Cargo.toml  build.rs
solira-runner/src/: main.rs
src/: bridge.rs  clickhouse.rs  db.rs  dev_db.rs  dev_mode.rs  geyser.rs  ipc.rs  lib.rs  main.rs  plugin.rs
