[workspace]
members = ["geyser-replay"]

[package]
name = "solira"
version = "0.1.0"
edition = "2021"
authors = ["sam0x17"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["cdylib", "rlib"]

[workspace.dependencies]
geyser-replay = { path = "geyser-replay", version = "0.1.0" }
demo-rust-ipld-car = { git = "https://github.com/rpcpool/yellowstone-faithful.git" }
tokio = { version = "1", features = ["full"] }
futures-util = "0"
log = "0"
agave-geyser-plugin-interface = "2"
solana-logger = "2"
solana-program = "2"
once_cell = "1"
serde_json = "1"
thiserror = "2"
reqwest = { version = "0", features = ["stream", "blocking"] }
anyhow = "1"
base64 = "0"
bincode = "1"
bs58 = "0"
cbor = "0"
cid = "0"
colored = "2"
const-hex = "1"
crc = "3"
crossbeam-channel = "0"
fnv = "1"
url = "2"
multihash = "0"
prost = { package = "prost", version = "0" }
prost_011 = { package = "prost", version = "0.11" }
protobuf-src = "1"
serde = "1"
serde_cbor = "0"
solana-accounts-db = "2"
solana-entry = "2"
solana-geyser-plugin-manager = "2"
solana-rpc = "2"
solana-runtime = "2"
solana-sdk = "2"
solana-storage-proto = "2"
solana-transaction-status = "2"
tonic = "0"
tonic-build = "0"
zstd = "0"
thousands = "0"
tokio-stream = { version = "0", features = ["full"] }
rangemap = "1"
rseek = ">= 0.2"
rayon = "1"
clickhouse = ">= 0.13"
interprocess = { version = "2", features = ["tokio"] }

[dependencies]
tokio.workspace = true
log.workspace = true
agave-geyser-plugin-interface.workspace = true
solana-logger.workspace = true
solana-program.workspace = true
once_cell.workspace = true
serde_json.workspace = true
thousands.workspace = true
clickhouse.workspace = true
geyser-replay.workspace = true
reqwest.workspace = true
interprocess.workspace = true
serde.workspace = true