[workspace]
members = ["geyser-replay", "jetstreamer-geyser-plugin", "jetstreamer-build-cdylib", "jetstreamer-plugin"]

[package]
name = "jetstreamer"
version = "0.1.0"
edition = "2024"
authors = ["sam0x17"]

[workspace.dependencies]
geyser-replay = { path = "geyser-replay", version = "0.1.0" }
jetstreamer-geyser-plugin = { path = "jetstreamer-geyser-plugin", version = "0.1.0" }
jetstreamer-plugin = { path = "jetstreamer-plugin", version = "0.1.0" }
demo-rust-ipld-car = { git = "https://github.com/rpcpool/yellowstone-faithful.git" }
tokio = { version = "1", features = ["full"] }
futures-util = "0"
futures = "0"
log = "0"
agave-geyser-plugin-interface = "2"
solana-logger = "2"
solana-program = "2"
once_cell = "1"
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["stream", "blocking", "json"] }
anyhow = "1"
base64 = "0"
bincode = "1"
bs58 = "0"
cbor = "0"
cid = "0"
colored = "2"
const-hex = "1"
crc = "3"
crossbeam-channel = "0"
fnv = "1"
url = "2"
multihash = "0"
prost = { package = "prost", version = "0" }
prost_011 = { package = "prost", version = "0.11" }
protobuf-src = "1"
serde = "1"
serde_cbor = "0"
solana-accounts-db = "2"
solana-entry = "2"
solana-ledger = "2"
solana-geyser-plugin-manager = "2"
solana-rpc = "2"
solana-runtime = "2"
solana-sdk = "2"
solana-storage-proto = "2"
solana-transaction-status = "2"
solana-system-program = "2"
solana-vote-program = "2"
sha2 = "0.10"
tonic = "0"
tonic-build = "0"
zstd = "0"
thousands = "0"
tokio-stream = { version = "0", features = ["full"] }
rangemap = "1"
rseek = ">= 0.2"
rayon = "1"
clickhouse = { version = ">= 0.13", features = ["uuid", "time", "lz4", "watch", "inserter"] }
interprocess = { version = "2", features = ["tokio"] }
ctrlc = "3"
indoc = "2"
tempfile = "3"
libc = "0"

[dependencies]
tempfile.workspace = true
serde_json.workspace = true
tokio.workspace = true
solana-logger.workspace = true
log.workspace = true
reqwest.workspace = true
geyser-replay.workspace = true
jetstreamer-plugin.workspace = true

[build-dependencies]
jetstreamer-build-cdylib = { path = "jetstreamer-build-cdylib", version = "0.1.0", features = ["link-jetstreamer"] }

[features]
plugin-runner = ["jetstreamer-build-cdylib/plugin-runner"]

[profile.release]
lto = "fat"
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
