[package]
name = "geyser-replay"
version = "0.1.0"
edition = "2021"
authors = ["sam0x17"]
license = "MIT"
description = "A utility that allows replaying ranges of Solana blocks, even back to genesis, over a geyser plugin using Old Faithful"

[dependencies]
demo-rust-ipld-car.workspace = true
crossbeam-channel.workspace = true
solana-rpc.workspace = true
solana-runtime.workspace = true
solana-sdk.workspace = true
solana-geyser-plugin-manager.workspace = true
solana-storage-proto.workspace = true
solana-transaction-status.workspace = true
prost_011.workspace = true
solana-entry.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures-util.workspace = true
anyhow.workspace = true
rangemap.workspace = true
thiserror.workspace = true
cid.workspace = true
multihash.workspace = true
base64.workspace = true
solana-logger.workspace = true
log.workspace = true
rseek.workspace = true
