[package]
name = "jetstreamer-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
jetstreamer-firehose.workspace = true

solana-logger.workspace = true
solana-system-program.workspace = true
solana-vote-program.workspace = true
serde.workspace = true
solana-sdk.workspace = true
tokio.workspace = true
interprocess.workspace = true
log.workspace = true
bincode.workspace = true
clickhouse.workspace = true
futures-util.workspace = true
thiserror.workspace = true
rayon.workspace = true
reqwest.workspace = true
futures.workspace = true
sha2.workspace = true
crossbeam-channel.workspace = true
