[package]
name = "jetstreamer-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
jetstreamer-firehose.workspace = true

serde.workspace = true
solana-sdk.workspace = true
tokio.workspace = true
log.workspace = true
clickhouse.workspace = true
futures-util.workspace = true
thiserror.workspace = true
sha2.workspace = true
