[package]
name = "jetstreamer-plugin"
description = "Support crate for Jetstreamer containing plugin framework abstractions and utilities"
keywords.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
jetstreamer-firehose.workspace = true

serde.workspace = true
solana-sdk.workspace = true
tokio.workspace = true
log.workspace = true
clickhouse.workspace = true
futures-util.workspace = true
thiserror.workspace = true
sha2.workspace = true
dashmap.workspace = true
