[package]
name = "of1-cache"
version = "0.1.0"
edition = "2021"
authors = ["sam0x17"]
license = "MIT"
keywords = ["solana", "CAR", "cache", "old", "faithful"]
description = "Manages a cache of old faithful Solana CAR files using a combination of in-memory and on-disk storage"

[dependencies]
memmap2 = "0.9"
