[package]
name = "of1"
version = "0.1.0"
edition = "2021"
authors = ["sam0x17"]
license = "MIT"
keywords = ["solana", "old faithful", "CAR", "blockchain", "crypto"]
description = "Allows for direct streaming access to Old Faithful CAR files over HTTP and filecoin"

[dependencies]
base64.workspace = true
bincode.workspace = true
cid.workspace = true
crc.workspace = true
crossbeam-channel.workspace = true
fnv.workspace = true
multihash.workspace = true
prost_011.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_cbor.workspace = true
serde_json.workspace = true
solana-accounts-db.workspace = true
solana-entry.workspace = true
solana-geyser-plugin-manager.workspace = true
solana-rpc.workspace = true
solana-runtime.workspace = true
solana-sdk.workspace = true
solana-storage-proto.workspace = true
solana-transaction-status.workspace = true
zstd.workspace = true
url.workspace = true
tokio-stream.workspace = true
