[package]
name = "solira-core"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "solira"

[dependencies]
tokio.workspace = true
log.workspace = true
agave-geyser-plugin-interface.workspace = true
solana-logger.workspace = true
solana-program.workspace = true
once_cell.workspace = true
serde_json.workspace = true
thousands.workspace = true
clickhouse.workspace = true
geyser-replay.workspace = true
reqwest.workspace = true
interprocess.workspace = true
serde.workspace = true
solana-sdk.workspace = true
ctrlc.workspace = true
bincode.workspace = true
indoc.workspace = true
tempfile.workspace = true
