[package]
name = "solira-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
tempfile.workspace = true
serde_json.workspace = true
tokio.workspace = true
solana-logger.workspace = true
log.workspace = true
reqwest.workspace = true
geyser-replay.workspace = true

[build-dependencies]
solira-build-cdylib = { path = "../solira-build-cdylib", version = "0.1.0" }
